<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp">

        <!--<ImageView-->
        <!--android:id="@+id/bkgnd"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/bkgnd"/>-->

        <com.naman14.timber.music_cutter.WaveformView
            android:id="@+id/waveform"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.naman14.timber.music_cutter.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_marker"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <com.naman14.timber.music_cutter.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_marker"
            android:nextFocusUp="@+id/startmarker"
            android:nextFocusDown="@+id/info"
            android:src="@drawable/marker_right" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play_pause_layout"
        android:nextFocusUp="@+id/endmarker"
        android:nextFocusDown="@+id/play"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/play_pause_layout"
        style="@style/ToolbarBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_marginBottom="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/rewind"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            style="@android:style/MediaButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/ffwd"
            android:src="@android:drawable/ic_media_next" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLayout"
        style="@style/ToolbarBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llAdView"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

        <TextView
            android:id="@+id/mark_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight=".7"
            android:clickable="true"
            android:labelFor="@+id/starttext"
            android:text="@string/start_label"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/starttext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mark_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".5"
            android:clickable="true"
            android:labelFor="@+id/endtext"
            android:text="@string/end_label"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            android:visibility="gone"

            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>

</RelativeLayout>
